# $Id$

noinst_HEADERS = bbsconfig.h btmp.h cgi.h chat.h clipboard.h commands.h \
defs.h dexi.h dexi2.h display_message.h enter_message.h express.h \
ext.h extra.h friends.h front.h fun.h global.h help.h input.h inter.h \
key.h libcache.h libfriends.h libmono.h libquad.h libshix.h libuid.h \
log.h main.h menu.h messages.h monolith.h monosql.h msg_file.h newuser.h \
qc.h read_menu.h registration.h rooms.h routines.h routines2.h server.h \
setup.h sql_config.h sql_convert.h sql_express.h sql_forum.h \
sql_forumtopic.h sql_goto.h sql_llist.h sql_login.h sql_mail.h \
sql_message.h sql_online.h sql_rating.h sql_topic.h sql_user.h \
sql_userforum.h sql_usertopic.h sql_useruser.h sql_utils.h sql_web.h \
sqlfile.h statusbar.h superhero.h sysconfig.h telnet.h typedefs.h \
uadmin.h userfile.h usertools.h util.h vote.h wholist.h 
