# $Id$ 

noinst_LIBRARIES = libyawc.a
libyawc_a_SOURCES = btmp.c libcache.c libdexi.c libfriends.c libquad.c libuid.c log.c \
 routines.c userfile.c sql_utils.c sql_user.c sql_userforum.c sql_useruser.c \
 sql_mail.c sql_topic.c sql_config.c sql_forum.c sql_goto.c sql_login.c 

LDADD = -L/usr/local/mysql/lib -lmysqlclient

