# $Id$ 

noinst_LIBRARIES = libshix.a
libshix_a_SOURCES = libshix.c regerror.c regexp.c regsub.c

CFLAGS += -pedantic -w -W \
  -Wall -Waggregate-return -Wcast-align -Wcast-qual \
  -Wcomment -Wconversion -Werror -Wformat -Wimplicit \
  -Wimplicit-int -Wimplicit-function-declaration -Winline \
  -Wmissing-prototypes -Wmissing-declarations \
  -Wnested-externs -Wno-import -Wparentheses -Wpointer-arith \
  -Wredundant-decls -Wreturn-type -Wshadow -Wstrict-prototypes \
  -Wswitch
