# $Id: Makefile.am 951 1999-07-28 01:48:00Z cafuego $

sqldir = $(prefix)/doc/sql
sql_DATA = run error.sql goto.sql message-index.sql userforum.sql \
	config.sql express.sql login.sql message.sql topics.sql usertopic.sql \
	country.dat.bz2 forum.sql mail.sql online.sql uqc.sql useruser.sql \
	country.sql fqc.sql message-content.sql rating.sql user.sql web-x.sql
