# $Id$

feelingsdir = $(prefix)/share/feelings
feelings_DATA = feeling0 feeling1 feeling10 feeling11 feeling12 feeling13 feeling14 feeling15 feeling16 feeling17 feeling18 feeling19 feeling2 feeling20 feeling21 feeling22 feeling23 feeling24 feeling25 feeling26 feeling27 feeling28 feeling29 feeling3 feeling30 feeling4 feeling5 feeling6 feeling7 feeling8 feeling9

